# GUIBomberCatv2

./: .env.example  .python-version  =1.11.0  README.md  demo_config_api.py  demo_firmware.py  demo_flash_wizard.py  demo_mqtt_service.py  demo_nfc_relay.py  pyproject.toml  requirements.txt
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
adapters/: __init__.py
adapters/interfaces/: __init__.py  __init__.py.bak.20250704_202530  base_service.py  repositories.py  services.py
api/: __init__.py  dependencies.py  dependencies.py.bak.20250704_202530  main.py  repositories.py  websocket_manager.py
api/routers/: __init__.py  config.py  configuration.py  configuration.py.bak.20250704_202530  devices.py  devices.py.bak.20250704_202530  firmware.py  firmware.py.bak.20250704_202530  flashing.py  flashing.py.bak.20250704_202530
api/routes/: __init__.py  config_routes.py  device_routes.py  flash_routes.py  mqtt_routes.py  relay_routes.py
config/: __init__.py  paths.py
config_backups/: config_backup_20250704_124351.json  config_backup_20250704_124400.json  config_backup_20250704_124412.json
core/: __init__.py
docs/: api_usage.md  config_api_usage.md  dashboard_usage.md  firmware_manager_usage.md  flash_wizard.md  import_standards.md  mqtt_setup.md  relay_architecture.md  troubleshooting_ui.md  ui_usage_guide.md  usb_permissions.md
infrastructure/: __init__.py  aws_iot_adapter.py  esptool_adapter.py
scripts/: PRD.txt  fix_imports.sh
services/: __init__.py  config_service.py  flash_service.py  mqtt_service.py  relay_service.py
tests/: __init__.py  test_imports.py
tools/: __init__.py  fix_imports.py  import_analyzer.py
ui/: __init__.py  main.py  state.py  test_simple.py  websocket_manager.py
(+91 files in other folders)
